syntax = "proto3";

import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "com.example.service.adoptions.grpc";
option java_outer_classname = "AdoptionsProto";

// The greeting service definition.
service Adoptions {

  rpc Adopt (AdoptionRequest) returns (google.protobuf.Empty) {}

  rpc All (google.protobuf.Empty) returns (DogsResponse) {}

}

// The request message containing the user's name.
message AdoptionRequest {
  int32 dogId = 1;
  string name = 2;
}

message Dog {
  int32  dogId = 1;
  string  name = 2;
  string  owner = 3;
  string  description = 4;
}

message DogsResponse {
  repeated Dog dogs = 1;
}
